working on traversal and backtracking algorithm

--- a/src/partials/_tableStyles.scss
+++ b/src/partials/_tableStyles.scss
@@ -14,3 +14,9 @@ table {
 .conflict {
     background-color: red;
 }
+
+.userInputDisabled {
+    color: white;
+    background: black;
+    border: 1px solid black;
+}
