--- a/src/App.css
+++ b/src/App.css
@@ -247,4 +247,10 @@ table {
 
 .conflict {
   background-color: red;
+}
+
+.userInputDisabled {
+  color: white;
+  background: black;
+  border: 1px solid black;
 }/*# sourceMappingURL=App.css.map */
