--- a/src/partials/_tableStyles.scss
+++ b/src/partials/_tableStyles.scss
@@ -5,6 +5,16 @@ table {
     align-items: center;
     border-collapse: collapse;
 
+
+    input {
+        border-radius: 0;
+        border: 1px solid #E3E3E3;
+        &:focus {
+            outline: none;
+            border: 2px solid blue;
+        }
+    }
+
     tbody {
         border: 3px solid black;
         // border-collapse: collapse;
@@ -17,14 +27,10 @@ table {
         border-right: 2px solid black;
     }
     
-    input {
-        border-radius: 0;
-        &:focus {
-            outline: none;
-            border: 2px solid blue;
-        }
+    .tileColor {
+        background-color: skyblue;
     }
-    
+
     .cell {
         height: 40px;
         width: 40px;
