--- a/src/App.css
+++ b/src/App.css
@@ -241,11 +241,146 @@ table {
 }
 table input {
   border-radius: 0;
-  border: 1px solid #E3E3E3;
+  border: 1px solid darkgray;
 }
 table input:focus {
   outline: none;
   border: 2px solid blue;
+}
+table .r0c0 {
+  background-color: peachpuff;
+}
+table .r0c1 {
+  background-color: peachpuff;
+}
+table .r0c2 {
+  background-color: peachpuff;
+}
+table .r1c0 {
+  background-color: peachpuff;
+}
+table .r1c1 {
+  background-color: peachpuff;
+}
+table .r1c2 {
+  background-color: peachpuff;
+}
+table .r2c0 {
+  background-color: peachpuff;
+}
+table .r2c1 {
+  background-color: peachpuff;
+}
+table .r2c2 {
+  background-color: peachpuff;
+}
+table .r0c6 {
+  background-color: peachpuff;
+}
+table .r0c7 {
+  background-color: peachpuff;
+}
+table .r0c8 {
+  background-color: peachpuff;
+}
+table .r1c6 {
+  background-color: peachpuff;
+}
+table .r1c7 {
+  background-color: peachpuff;
+}
+table .r1c8 {
+  background-color: peachpuff;
+}
+table .r2c6 {
+  background-color: peachpuff;
+}
+table .r2c7 {
+  background-color: peachpuff;
+}
+table .r2c8 {
+  background-color: peachpuff;
+}
+table .r3c3 {
+  background-color: peachpuff;
+}
+table .r3c4 {
+  background-color: peachpuff;
+}
+table .r3c5 {
+  background-color: peachpuff;
+}
+table .r4c3 {
+  background-color: peachpuff;
+}
+table .r4c4 {
+  background-color: peachpuff;
+}
+table .r4c5 {
+  background-color: peachpuff;
+}
+table .r5c3 {
+  background-color: peachpuff;
+}
+table .r5c4 {
+  background-color: peachpuff;
+}
+table .r5c5 {
+  background-color: peachpuff;
+}
+table .r6c0 {
+  background-color: peachpuff;
+}
+table .r6c1 {
+  background-color: peachpuff;
+}
+table .r6c2 {
+  background-color: peachpuff;
+}
+table .r7c0 {
+  background-color: peachpuff;
+}
+table .r7c1 {
+  background-color: peachpuff;
+}
+table .r7c2 {
+  background-color: peachpuff;
+}
+table .r8c0 {
+  background-color: peachpuff;
+}
+table .r8c1 {
+  background-color: peachpuff;
+}
+table .r8c2 {
+  background-color: peachpuff;
+}
+table .r6c6 {
+  background-color: peachpuff;
+}
+table .r6c7 {
+  background-color: peachpuff;
+}
+table .r6c8 {
+  background-color: peachpuff;
+}
+table .r7c6 {
+  background-color: peachpuff;
+}
+table .r7c7 {
+  background-color: peachpuff;
+}
+table .r7c8 {
+  background-color: peachpuff;
+}
+table .r8c6 {
+  background-color: peachpuff;
+}
+table .r8c7 {
+  background-color: peachpuff;
+}
+table .r8c8 {
+  background-color: peachpuff;
 }
 table tbody {
   border: 3px solid black;
