--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,4 @@
 @import './partials/setup';
 @import './partials/baseStyles';
-@import './partials/tableStyles';
+@import './partials/mixins';
+@import './partials/sections/tableStyles';
