--- a/src/partials/_baseStyles.scss
+++ b/src/partials/_baseStyles.scss
@@ -8,3 +8,18 @@ td {
     padding: 0;
     margin: 0;
 }
+
+html {
+    font-size: 125%;
+}
+
+.wrapper {
+    max-width: 1280px;
+    width: 85%;
+    margin: 0 auto;
+}
+
+button {
+    // border-radius: 0;
+    
+}
