--- a/src/App.css
+++ b/src/App.css
@@ -232,178 +232,212 @@ td {
   margin: 0;
 }
 
-table {
+html {
+  font-size: 125%;
+}
+
+.wrapper {
+  max-width: 1280px;
+  width: 85%;
+  margin: 0 auto;
+}
+
+.sudokuDisplay .wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.sudokuDisplay table {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   border-collapse: collapse;
 }
-table input {
-  border-radius: 0;
+.sudokuDisplay input {
   border: 1px solid darkgray;
 }
-table input:focus {
+.sudokuDisplay input:focus {
   outline: none;
   border: 2px solid blue;
 }
-table .r0c0 {
+.sudokuDisplay .r0c0 {
   background-color: peachpuff;
 }
-table .r0c1 {
+.sudokuDisplay .r0c1 {
   background-color: peachpuff;
 }
-table .r0c2 {
+.sudokuDisplay .r0c2 {
   background-color: peachpuff;
 }
-table .r1c0 {
+.sudokuDisplay .r1c0 {
   background-color: peachpuff;
 }
-table .r1c1 {
+.sudokuDisplay .r1c1 {
   background-color: peachpuff;
 }
-table .r1c2 {
+.sudokuDisplay .r1c2 {
   background-color: peachpuff;
 }
-table .r2c0 {
+.sudokuDisplay .r2c0 {
   background-color: peachpuff;
 }
-table .r2c1 {
+.sudokuDisplay .r2c1 {
   background-color: peachpuff;
 }
-table .r2c2 {
+.sudokuDisplay .r2c2 {
   background-color: peachpuff;
 }
-table .r0c6 {
+.sudokuDisplay .r0c6 {
   background-color: peachpuff;
 }
-table .r0c7 {
+.sudokuDisplay .r0c7 {
   background-color: peachpuff;
 }
-table .r0c8 {
+.sudokuDisplay .r0c8 {
   background-color: peachpuff;
 }
-table .r1c6 {
+.sudokuDisplay .r1c6 {
   background-color: peachpuff;
 }
-table .r1c7 {
+.sudokuDisplay .r1c7 {
   background-color: peachpuff;
 }
-table .r1c8 {
+.sudokuDisplay .r1c8 {
   background-color: peachpuff;
 }
-table .r2c6 {
+.sudokuDisplay .r2c6 {
   background-color: peachpuff;
 }
-table .r2c7 {
+.sudokuDisplay .r2c7 {
   background-color: peachpuff;
 }
-table .r2c8 {
+.sudokuDisplay .r2c8 {
   background-color: peachpuff;
 }
-table .r3c3 {
+.sudokuDisplay .r3c3 {
   background-color: peachpuff;
 }
-table .r3c4 {
+.sudokuDisplay .r3c4 {
   background-color: peachpuff;
 }
-table .r3c5 {
+.sudokuDisplay .r3c5 {
   background-color: peachpuff;
 }
-table .r4c3 {
+.sudokuDisplay .r4c3 {
   background-color: peachpuff;
 }
-table .r4c4 {
+.sudokuDisplay .r4c4 {
   background-color: peachpuff;
 }
-table .r4c5 {
+.sudokuDisplay .r4c5 {
   background-color: peachpuff;
 }
-table .r5c3 {
+.sudokuDisplay .r5c3 {
   background-color: peachpuff;
 }
-table .r5c4 {
+.sudokuDisplay .r5c4 {
   background-color: peachpuff;
 }
-table .r5c5 {
+.sudokuDisplay .r5c5 {
   background-color: peachpuff;
 }
-table .r6c0 {
+.sudokuDisplay .r6c0 {
   background-color: peachpuff;
 }
-table .r6c1 {
+.sudokuDisplay .r6c1 {
   background-color: peachpuff;
 }
-table .r6c2 {
+.sudokuDisplay .r6c2 {
   background-color: peachpuff;
 }
-table .r7c0 {
+.sudokuDisplay .r7c0 {
   background-color: peachpuff;
 }
-table .r7c1 {
+.sudokuDisplay .r7c1 {
   background-color: peachpuff;
 }
-table .r7c2 {
+.sudokuDisplay .r7c2 {
   background-color: peachpuff;
 }
-table .r8c0 {
+.sudokuDisplay .r8c0 {
   background-color: peachpuff;
 }
-table .r8c1 {
+.sudokuDisplay .r8c1 {
   background-color: peachpuff;
 }
-table .r8c2 {
+.sudokuDisplay .r8c2 {
   background-color: peachpuff;
 }
-table .r6c6 {
+.sudokuDisplay .r6c6 {
   background-color: peachpuff;
 }
-table .r6c7 {
+.sudokuDisplay .r6c7 {
   background-color: peachpuff;
 }
-table .r6c8 {
+.sudokuDisplay .r6c8 {
   background-color: peachpuff;
 }
-table .r7c6 {
+.sudokuDisplay .r7c6 {
   background-color: peachpuff;
 }
-table .r7c7 {
+.sudokuDisplay .r7c7 {
   background-color: peachpuff;
 }
-table .r7c8 {
+.sudokuDisplay .r7c8 {
   background-color: peachpuff;
 }
-table .r8c6 {
+.sudokuDisplay .r8c6 {
   background-color: peachpuff;
 }
-table .r8c7 {
+.sudokuDisplay .r8c7 {
   background-color: peachpuff;
 }
-table .r8c8 {
+.sudokuDisplay .r8c8 {
   background-color: peachpuff;
 }
-table tbody {
+.sudokuDisplay tbody {
   border: 3px solid black;
 }
-table .bottomBorder {
+.sudokuDisplay .bottomBorder {
   border-bottom: 2px solid black;
 }
-table .sideBorder {
+.sudokuDisplay .sideBorder {
   border-right: 2px solid black;
 }
-table .tileColor {
+.sudokuDisplay .tileColor {
   background-color: skyblue;
 }
-table .cell {
+.sudokuDisplay .cell {
   height: 40px;
   width: 40px;
   text-align: center;
 }
-table .conflict {
+.sudokuDisplay .conflict {
   background-color: red;
 }
-table .userInputDisabled {
+.sudokuDisplay .userInputDisabled {
   color: white;
   background: black;
-  border: 1px solid black;
+}
+.sudokuDisplay .inputButtons {
+  height: 30px;
+  width: 30px;
+}
+.sudokuDisplay .backspaceButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.sudokuDisplay .backspaceButton svg {
+  font-size: 2.22rem;
+}
+.sudokuDisplay h1,
+.sudokuDisplay tfoot {
+  margin: 20px 0;
+}
+.sudokuDisplay .inputButtonsRow {
+  width: 370px;
+  display: flex;
+  justify-content: space-between;
 }/*# sourceMappingURL=App.css.map */
