button styling and disable handling

--- a/src/App.css
+++ b/src/App.css
@@ -221,13 +221,23 @@ html {
   overflow: hidden;
 }
 
+h1 {
+  font-family: "Neuton", serif;
+  text-transform: uppercase;
+}
+
+button {
+  font-family: "Neuton", serif;
+}
+
 h1,
 p,
 input,
 table,
 tbody,
 tr,
-td {
+td,
+button {
   padding: 0;
   margin: 0;
 }
@@ -240,6 +250,35 @@ html {
   max-width: 1280px;
   width: 85%;
   margin: 0 auto;
+}
+
+button {
+  border: 2px solid black;
+  border-radius: 5px;
+  background-color: rgb(135, 228, 235);
+  color: black;
+}
+button:hover, button:focus {
+  background-color: teal;
+}
+button:focus {
+  outline: none;
+}
+button[disabled] {
+  background-color: rgb(244, 244, 244);
+  border-color: darkgrey;
+  color: rgb(165, 165, 165);
+}
+
+.buttonSelections {
+  display: flex;
+  flex-direction: column;
+}
+.buttonSelections button {
+  text-transform: uppercase;
+  margin: 10px 0;
+  padding: 10px 20px;
+  font-weight: 700;
 }
 
 .sudokuDisplay .wrapper {
@@ -256,6 +295,10 @@ html {
 }
 .sudokuDisplay input {
   border: 1px solid darkgray;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 .sudokuDisplay input:focus {
   outline: none;
@@ -409,35 +452,31 @@ html {
   background-color: skyblue;
 }
 .sudokuDisplay .cell {
-  height: 40px;
-  width: 40px;
+  height: 60px;
+  width: 60px;
   text-align: center;
 }
 .sudokuDisplay .conflict {
   background-color: red;
 }
 .sudokuDisplay .userInputDisabled {
-  color: white;
+  color: white !important;
   background: black;
 }
 .sudokuDisplay .inputButtons {
-  height: 30px;
-  width: 30px;
-}
-.sudokuDisplay .backspaceButton {
+  height: 40px;
+  width: 40px;
   display: flex;
   justify-content: center;
   align-items: center;
-}
-.sudokuDisplay .backspaceButton svg {
-  font-size: 2.22rem;
+  transition: 0.3s;
 }
 .sudokuDisplay h1,
 .sudokuDisplay tfoot {
   margin: 20px 0;
 }
 .sudokuDisplay .inputButtonsRow {
-  width: 370px;
+  width: 550px;
   display: flex;
   justify-content: space-between;
 }/*# sourceMappingURL=App.css.map */
