--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,6 @@
 @import './partials/setup';
 @import './partials/variables';
+@import './partials/typography';
 @import './partials/baseStyles';
 @import './partials/mixins';
 @import './partials/sections/tableStyles';
