--- a/src/partials/_variables.scss
+++ b/src/partials/_variables.scss
@@ -1,7 +1,11 @@
-// $tableLength: 
-$cellLength: 40px;
+$cellLength: 60px;
 $cellCount: 9;
 $tableBorder: 6px;
 $tRowPadding: 4px;
 
 $tFooterWidth: ($cellLength * $cellCount) + $tableBorder + $tRowPadding;
+
+$bodyFont: 'Neuton', serif;
+$lightTeal:  rgb(135, 228, 235);
+$disabledGrey: rgb(244, 244, 244);
+$disabledLightGrey: rgb(165, 165, 165);
