finalized styles + media queries for mobile and tablet displays

--- a/src/partials/_mixins.scss
+++ b/src/partials/_mixins.scss
@@ -7,3 +7,12 @@
         }
     }
 }
+
+@mixin cellDimension($cLength) {
+    width: $cLength;
+    height: $cLength;
+}
+
+@mixin tFooterWidth ($length) {
+    width: ($length * $cellCount) + $tableBorder + $tRowPadding;
+}
