--- a/src/partials/_typography.scss
+++ b/src/partials/_typography.scss
@@ -1,8 +1,11 @@
 h1 {
     font-family: $bodyFont;
+    text-align: center;
     text-transform: uppercase;
 }
 
 button {
     font-family: $bodyFont;
+    font-size: 1.2rem;
+    text-transform: uppercase;
 }
