--- a/src/App.css
+++ b/src/App.css
@@ -223,11 +223,14 @@ html {
 
 h1 {
   font-family: "Neuton", serif;
+  text-align: center;
   text-transform: uppercase;
 }
 
 button {
   font-family: "Neuton", serif;
+  font-size: 1.2rem;
+  text-transform: uppercase;
 }
 
 h1,
@@ -248,7 +251,7 @@ html {
 
 .wrapper {
   max-width: 1280px;
-  width: 85%;
+  width: 90%;
   margin: 0 auto;
 }
 
@@ -257,6 +260,7 @@ button {
   border-radius: 5px;
   background-color: rgb(135, 228, 235);
   color: black;
+  transition: 0.3s;
 }
 button:hover, button:focus {
   background-color: teal;
@@ -268,17 +272,6 @@ button[disabled] {
   background-color: rgb(244, 244, 244);
   border-color: darkgrey;
   color: rgb(165, 165, 165);
-}
-
-.buttonSelections {
-  display: flex;
-  flex-direction: column;
-}
-.buttonSelections button {
-  text-transform: uppercase;
-  margin: 10px 0;
-  padding: 10px 20px;
-  font-weight: 700;
 }
 
 .sudokuDisplay .wrapper {
@@ -452,8 +445,8 @@ button[disabled] {
   background-color: skyblue;
 }
 .sudokuDisplay .cell {
-  height: 60px;
   width: 60px;
+  height: 60px;
   text-align: center;
 }
 .sudokuDisplay .conflict {
@@ -469,7 +462,6 @@ button[disabled] {
   display: flex;
   justify-content: center;
   align-items: center;
-  transition: 0.3s;
 }
 .sudokuDisplay h1,
 .sudokuDisplay tfoot {
@@ -479,4 +471,51 @@ button[disabled] {
   width: 550px;
   display: flex;
   justify-content: space-between;
+}
+.sudokuDisplay .buttonSelections {
+  display: flex;
+  flex-direction: column;
+}
+.sudokuDisplay .buttonSelections button {
+  margin: 10px 0;
+  padding: 10px 20px;
+  font-weight: 700;
+}
+
+@media (max-width: 600px) {
+  .sudokuDisplay .cell {
+    width: 50px;
+    height: 50px;
+  }
+  .sudokuDisplay .inputButtonsRow {
+    width: 460px;
+  }
+}
+@media (max-width: 490px) {
+  .sudokuDisplay .cell {
+    width: 40px;
+    height: 40px;
+  }
+  .sudokuDisplay .inputButtonsRow {
+    flex-wrap: wrap;
+    width: 370px;
+  }
+  .sudokuDisplay .numberContainer {
+    width: 20%;
+    display: flex;
+    justify-content: center;
+    margin: 10px 0;
+  }
+}
+@media (max-width: 390px) {
+  .sudokuDisplay .cell {
+    width: 30px;
+    height: 30px;
+  }
+  .sudokuDisplay .inputButtonsRow {
+    width: 280px;
+  }
+  .sudokuDisplay .buttonSelections {
+    width: 98%;
+  }
 }/*# sourceMappingURL=App.css.map */
