--- a/src/partials/_baseStyles.scss
+++ b/src/partials/_baseStyles.scss
@@ -16,7 +16,7 @@ html {
 
 .wrapper {
     max-width: 1280px;
-    width: 85%;
+    width: 90%;
     margin: 0 auto;
 }
 
@@ -25,6 +25,7 @@ button {
     border-radius: 5px;
     background-color: $lightTeal;
     color: black;
+    transition: 0.3s;
 
     &:hover,
     &:focus {
@@ -39,16 +40,5 @@ button {
         background-color: $disabledGrey;
         border-color: darkgrey;
         color: $disabledLightGrey;
-    }
-}
-
-.buttonSelections {
-    display: flex;
-    flex-direction: column;
-    button {
-        text-transform: uppercase;
-        margin: 10px 0;
-        padding: 10px 20px;
-        font-weight: 700;
     }
 }
