finished features, working on about modal

--- a/src/partials/sections/_tableStyles.scss
+++ b/src/partials/sections/_tableStyles.scss
@@ -4,6 +4,8 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+
+        position: relative;
     }
 
     table {
@@ -91,6 +93,10 @@
 
     .sudokuDisplay {
 
+        h1 {
+            max-width: 318px;
+        }
+
         .cell {
             @include cellDimension(50px);
         }
@@ -102,7 +108,7 @@
 }
 
 
-@media(max-width: 490px) {
+@media (max-width: 490px) {
 
     .sudokuDisplay {
 
@@ -124,7 +130,7 @@
     }
 }
 
-@media(max-width: 390px) {
+@media (max-width: 390px) {
 
     .sudokuDisplay {
 
