--- a/src/App.scss
+++ b/src/App.scss
@@ -4,3 +4,4 @@
 @import './partials/baseStyles';
 @import './partials/mixins';
 @import './partials/sections/tableStyles';
+@import './partials/sections/aboutContainerStyles';
