--- a/src/App.css
+++ b/src/App.css
@@ -535,6 +535,19 @@ button[disabled] {
   right: 0;
   top: 2.5%;
 }
+.aboutContainer .aboutPage {
+  border: 5px solid black;
+  padding: 15px;
+  position: absolute;
+  z-index: 10;
+  background-color: peachpuff;
+  transform: translate(-50%);
+  height: 80%;
+  width: 95%;
+}
+.aboutContainer .aboutPage p {
+  margin: 10px 0;
+}
 
 @media (max-width: 600px) {
   .aboutContainer .aboutButton {
