--- a/src/partials/sections/_aboutContainerStyles.scss
+++ b/src/partials/sections/_aboutContainerStyles.scss
@@ -17,6 +17,22 @@
         right: 0;
         top: 2.5%;
     }
+
+    .aboutPage {
+        border: 5px solid black;
+        padding: 15px;
+        position: absolute;
+        z-index: 10;
+        background-color: peachpuff;
+        // transform: translate(-50%,50%);
+        transform: translate(-50%);
+        height: 80%;
+        width: 95%;
+
+        p {
+            margin: 10px 0;
+        }
+    }
 }
 
 @media (max-width: 600px) {
