--- a/src/partials/_variables.scss
+++ b/src/partials/_variables.scss
@@ -3,6 +3,8 @@ $tableBorder: 6px;
 $tRowPadding: 4px;
 
 $bodyFont: 'Neuton', serif;
+$paragraphFont: 'Mukta', sans-serif;
+
 $lightTeal:  rgb(135, 228, 235);
 $disabledGrey: rgb(244, 244, 244);
 $disabledLightGrey: rgb(165, 165, 165);
