--- a/src/App.css
+++ b/src/App.css
@@ -227,6 +227,16 @@ h1 {
   text-transform: uppercase;
 }
 
+h2 {
+  font-family: "Neuton", serif;
+  text-transform: uppercase;
+}
+
+p {
+  font-family: "Mukta", sans-serif;
+  line-height: 1.3;
+}
+
 button {
   font-family: "Neuton", serif;
   font-size: 1.2rem;
@@ -537,16 +547,25 @@ button[disabled] {
 }
 .aboutContainer .aboutPage {
   border: 5px solid black;
+  border-radius: 15px;
   padding: 15px;
-  position: absolute;
   z-index: 10;
   background-color: peachpuff;
-  transform: translate(-50%);
-  height: 80%;
+  min-height: 72%;
   width: 95%;
 }
 .aboutContainer .aboutPage p {
   margin: 10px 0;
+}
+.aboutContainer .aboutModalContainer {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 @media (max-width: 600px) {
