--- a/src/partials/sections/_aboutContainerStyles.scss
+++ b/src/partials/sections/_aboutContainerStyles.scss
@@ -16,22 +16,37 @@
         position: absolute;
         right: 0;
         top: 2.5%;
+        // z-index: 20;
     }
 
     .aboutPage {
         border: 5px solid black;
+        border-radius: 15px;
         padding: 15px;
-        position: absolute;
+        // position: absolute;
         z-index: 10;
         background-color: peachpuff;
         // transform: translate(-50%,50%);
-        transform: translate(-50%);
-        height: 80%;
+        // transform: translate(-50%);
+        min-height: 72%;
         width: 95%;
+        // overflow: scroll;
 
         p {
             margin: 10px 0;
         }
+    }
+
+
+    .aboutModalContainer {
+        position: fixed;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 }
 
