--- a/src/App.css
+++ b/src/App.css
@@ -549,13 +549,25 @@ button[disabled] {
   border: 5px solid black;
   border-radius: 15px;
   padding: 15px;
+  position: relative;
   z-index: 10;
   background-color: peachpuff;
-  min-height: 72%;
-  width: 95%;
+  height: 72%;
+  width: 85%;
+  overflow-y: auto;
 }
 .aboutContainer .aboutPage p {
   margin: 10px 0;
+}
+.aboutContainer .closeButton {
+  position: absolute;
+  right: 15px;
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  font-family: "Mukta", sans-serif;
+  font-weight: 700;
+  padding: 3px;
 }
 .aboutContainer .aboutModalContainer {
   position: fixed;
@@ -566,6 +578,7 @@ button[disabled] {
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 @media (max-width: 600px) {
