--- a/src/App.css
+++ b/src/App.css
@@ -580,6 +580,10 @@ button[disabled] {
   align-items: center;
   background-color: rgba(0, 0, 0, 0.5);
 }
+.aboutContainer .highlight {
+  color: crimson;
+  font-weight: 700;
+}
 
 @media (max-width: 600px) {
   .aboutContainer .aboutButton {
