mobile border radius on cells fix

--- a/src/partials/sections/_tableStyles.scss
+++ b/src/partials/sections/_tableStyles.scss
@@ -48,6 +48,7 @@
     .cell {
         @include cellDimension(60px);
         text-align: center;
+        border-radius: 0;
     }
     
     .conflict {
