--- a/src/App.css
+++ b/src/App.css
@@ -456,6 +456,7 @@ button[disabled] {
   width: 60px;
   height: 60px;
   text-align: center;
+  border-radius: 0;
 }
 .sudokuDisplay .conflict {
   background-color: red;
