--- a/src/partials/_mixins.scss
+++ b/src/partials/_mixins.scss
@@ -2,7 +2,7 @@
     @for $row from $rowStart through $rowEnd {
         @for $col from $colStart through $colEnd {
             .r#{$row}c#{$col} {
-                background-color: peachpuff;
+                background-color: peachpuff !important;
             }
         }
     }
