--- a/src/partials/sections/_aboutContainerStyles.scss
+++ b/src/partials/sections/_aboutContainerStyles.scss
@@ -39,6 +39,7 @@
         justify-content: center;
         align-items: center;
         background-color: rgba(0, 0, 0, 0.5);
+        z-index: 20;
     }
 
     .aboutPage {
@@ -46,8 +47,7 @@
         border-radius: 15px;
         padding: 15px;
         position: relative;
-        z-index: 10;
-        background-color: peachpuff;
+        background-color: peachpuff !important;
         height: 72%;
         width: 85%;
         overflow-y: auto;
