--- a/src/partials/_mixins.scss
+++ b/src/partials/_mixins.scss
@@ -3,6 +3,10 @@
         @for $col from $colStart through $colEnd {
             .r#{$row}c#{$col} {
                 background-color: peachpuff !important;
+
+                &:disabled {
+                    background-color: peachpuff !important;
+                }
             }
         }
     }
